--- a/company/customer_complain.html
+++ b/company/customer_complain.html
@@ -64,13 +64,13 @@
         <li class="nav-item dropdown pe-3">
 
           <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
-            <img src="../assets/img/profile-img.jpg" alt="Profile" class="rounded-circle">
-            <span class="d-none d-md-block dropdown-toggle ps-2">K. Anderson</span>
+            <img  id="profile-img" alt="Profile" class="rounded-circle">
+            <span class="d-none d-md-block dropdown-toggle ps-2" id="fullname"></span>
           </a><!-- End Profile Iamge Icon -->
 
           <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
             <li class="dropdown-header">
-              <h6>Kevin Anderson</h6>
+              <h6 id="subname"></h6>
               <!-- <span>Web Designer</span> -->
             </li>
             <li>
@@ -149,6 +149,11 @@
           <li>
             <a href="viewservicecategory.html">
               <i class="bi bi-circle"></i><span>View Service Category</span>
+            </a>
+          </li>
+          <li>
+            <a href="viewbooking.html">
+              <i class="bi bi-circle"></i><span>View Booking</span>
             </a>
           </li>
         </ul>
@@ -272,7 +277,8 @@
     
       <!-- Template Main JS File -->
       <script src="assets/js/main.js"></script>
-      <script type="module" src="js/logout.js"></script>      script>
+      <script type="module" src="js/logout.js"></script>
+      <script type="module" src="js/profile_data.js"></script>
     
 </body>
 </html>
