--- a/company/dashboard.html
+++ b/company/dashboard.html
@@ -72,13 +72,13 @@
         <li class="nav-item dropdown pe-3">
 
           <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
-            <img src="../assets/img/profile-img.jpg" alt="Profile" class="rounded-circle">
-            <span class="d-none d-md-block dropdown-toggle ps-2">K. Anderson</span>
+            <img  id="profile-img" alt="Profile" class="rounded-circle">
+            <span class="d-none d-md-block dropdown-toggle ps-2" id="fullname"></span>
           </a><!-- End Profile Iamge Icon -->
 
           <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
             <li class="dropdown-header">
-              <h6>Kevin Anderson</h6>
+              <h6 id="subname"> </h6>
               <!-- <span>Web Designer</span> -->
             </li>
             <li>
@@ -159,8 +159,16 @@
               <i class="bi bi-circle"></i><span>View Service Category</span>
             </a>
           </li>
+          <li>
+            <a href="viewbooking.html">
+              <i class="bi bi-circle"></i><span>View Booking</span>
+            </a>
+          </li>
         </ul>
-      </li><!-- End Charts Nav -->
+      </li>
+     
+      <!-- 
+        End Charts Nav -->
       <li class="nav-heading">Other Information</li>
 
       <li class="nav-item">
@@ -170,12 +178,7 @@
         </a>
       </li><!-- End Profile Page Nav -->
 
-      <li class="nav-item">
-        <a class="nav-link collapsed" href="customer_complain.html">
-          <i class="bi bi-question-circle"></i>
-          <span>Customer Complains</span>
-        </a>
-      </li><!-- End F.A.Q Page Nav -->
+      
 
       <li class="nav-item">
         <a class="nav-link collapsed" href="payment.html">
@@ -249,7 +252,7 @@
                       <i class="bi bi-currency-dollar"></i>
                     </div>
                     <div class="ps-3">
-                      <h6>145</h6>
+                      <h6 id="payment_total">145</h6>
                       <!-- <span class="text-success small pt-1 fw-bold">12</span> <span class="text-muted small pt-2 ps-1">increase</span> -->
 
                     </div>
@@ -284,7 +287,7 @@
                       <i class="bi bi-person"></i>
                     </div>
                     <div class="ps-3">
-                      <h6>200</h6>
+                      <h6 id="employeeamount">200</h6>
                       <!-- <span class="text-success small pt-1 fw-bold">8%</span> <span class="text-muted small pt-2 ps-1">increase</span> -->
 
                     </div>
@@ -320,7 +323,7 @@
                       <i class="bi bi-person-badge"></i>
                     </div>
                     <div class="ps-3">
-                      <h6>1244</h6>
+                      <h6 id="activeservice">1244</h6>
                       <!-- <span class="text-danger small pt-1 fw-bold">12%</span> <span class="text-muted small pt-2 ps-1">decrease</span> -->
 
                     </div>
@@ -357,7 +360,7 @@
                       <i class="bi bi-bar-chart"></i>
                     </div>
                     <div class="ps-3">
-                      <h6>1244</h6>
+                      <h6 id="completedservice">1244</h6>
                       <!-- <span class="text-danger small pt-1 fw-bold">12%</span> <span class="text-muted small pt-2 ps-1">decrease</span> -->
 
                     </div>
@@ -405,6 +408,7 @@
   <!-- Template Main JS File -->
   <script src="../assets/js/main.js"></script>
   <!-- <script type="module" src="assets/js/checkstate.js"></script> -->
+  <script type="module" src="js/profile_data.js"></script>
   <script type="module" src="js/logout.js"></script>
 
 </body>
