--- a/company/displaysingleemployeedata.html
+++ b/company/displaysingleemployeedata.html
@@ -61,13 +61,13 @@
         <li class="nav-item dropdown pe-3">
 
           <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
-            <img src="../assets/img/profile-img.jpg" alt="Profile" class="rounded-circle">
-            <span class="d-none d-md-block dropdown-toggle ps-2">K. Anderson</span>
+            <img  id="profile-img" alt="Profile" class="rounded-circle">
+            <span class="d-none d-md-block dropdown-toggle ps-2" id="fullname"></span>
           </a><!-- End Profile Iamge Icon -->
 
           <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
             <li class="dropdown-header">
-              <h6>Kevin Anderson</h6>
+              <h6 id="fullname"></h6>
               <!-- <span>Web Designer</span> -->
             </li>
             <li>
@@ -150,6 +150,11 @@
               <i class="bi bi-circle"></i><span>View Service Category</span>
             </a>
           </li>
+          <li>
+            <a href="viewbooking.html">
+              <i class="bi bi-circle"></i><span>View Booking</span>
+            </a>
+          </li>
         </ul>
       </li><!-- End Charts Nav -->
       <li class="nav-heading">Other Information</li>
@@ -161,12 +166,7 @@
         </a>
       </li><!-- End Profile Page Nav -->
 
-      <li class="nav-item">
-        <a class="nav-link collapsed" href="customer_complain.html">
-          <i class="bi bi-question-circle"></i>
-          <span>Customer Complains</span>
-        </a>
-      </li><!-- End F.A.Q Page Nav -->
+   
 
       <li class="nav-item">
         <a class="nav-link collapsed" href="payment.html">
@@ -227,7 +227,6 @@
               <p>Service Type :  &numsp; <span id="servicetype" class="text-justify" style="font-size: 18px;"></span></p>
               <p>Employee Certificate :  &numsp; <span id="certificate" class="text-justify" style="font-size: 18px;"></span></p>
               <p>Employee Expreince :  &numsp; <span id="expreince" class="text-justify" style="font-size: 18px;"></span></p>
-              <p>Company Associated With :  &numsp; <span id="companyassociatedwith" class="text-justify" style="font-size: 18px;"></span></p>
               <div class="text-start">
                 <a href="view_employee.html" class="btn btn-primary">Go Back</a>
               </div>
@@ -248,6 +247,7 @@
     <!--   viewdata  JS File -->
     <script   src="../assets/js/main.js"></script>
     <script  type="module"  src="js/viewsingleemployeedata.js"></script>
+    <script type="module" src="js/profile_data.js"></script>
     <script type="module" src="js/logout.js"></script>
    
 
