--- a/company/users-profile.html
+++ b/company/users-profile.html
@@ -77,13 +77,13 @@
         <li class="nav-item dropdown pe-3">
 
           <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
-            <img src="../assets/img/profile-img.jpg" alt="Profile" class="rounded-circle">
-            <span class="d-none d-md-block dropdown-toggle ps-2">K. Anderson</span>
+            <img  id="profile-img" alt="Profile" class="rounded-circle">
+            <span class="d-none d-md-block dropdown-toggle ps-2"id="fullname"></span>
           </a><!-- End Profile Iamge Icon -->
 
           <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
             <li class="dropdown-header">
-              <h6>Kevin Anderson</h6>
+              <h6 id="subname"></h6>
               <!-- <span>Web Designer</span> -->
             </li>
             <li>
@@ -163,6 +163,11 @@
             <i class="bi bi-circle"></i><span>View Service Category</span>
           </a>
         </li>      
+        <li>
+          <a href="viewbooking.html">
+            <i class="bi bi-circle"></i><span>View Booking</span>
+          </a>
+        </li>
       </ul>
     </li><!-- End Charts Nav -->
     <li class="nav-heading">Other Information</li>
@@ -174,12 +179,7 @@
       </a>
     </li><!-- End Profile Page Nav -->
 
-    <li class="nav-item">
-      <a class="nav-link collapsed" href="customer_complain.html">
-        <i class="bi bi-question-circle"></i>
-        <span>Customer Complains</span>
-      </a>
-    </li><!-- End F.A.Q Page Nav -->
+ 
 
     <li class="nav-item">
       <a class="nav-link collapsed" href="payment.html">
@@ -193,7 +193,7 @@
     <li class="nav-item">
       <a class="nav-link collapsed" href="#" id="logout">
         <i class="bi bi-box-arrow-in-right"></i>
-        <span>Logout</span>
+        <span id="logout">Logout</span>
       </a>
     </li><!-- End Login Page Nav -->
 <!-- 
@@ -231,9 +231,9 @@
           <div class="card">
             <div class="card-body profile-card pt-4 d-flex flex-column align-items-center">
 
-              <img src="../assets/img/profile-img.jpg" alt="Profile" class="rounded-circle">
-              <h2>Kevin Anderson</h2>
-              <h3>Admin</h3>
+              <img src='' id="profile" class="rounded" width="300"/>
+              <h2 id="fullname"></h2>
+              <h3 id="role"></h3>
        
             </div>
           </div>
@@ -271,23 +271,23 @@
                   <h5 class="card-title">Profile Details</h5>
 
                   <div class="row">
-                    <div class="col-lg-3 col-md-4 label ">Full Name</div>
-                    <div class="col-lg-9 col-md-8">Kevin Anderson</div>
+                    <div class="col-lg-3 col-md-4 label " >Full Name</div>
+                    <div class="col-lg-9 col-md-8" id="fullname2"></div>
                   </div>
 
                   <div class="row">
-                    <div class="col-lg-3 col-md-4 label">Role</div>
-                    <div class="col-lg-9 col-md-8">Admin</div>
+                    <div class="col-lg-3 col-md-4 label" >Role</div>
+                    <div class="col-lg-9 col-md-8"id="roles"></div>
                   </div>
                   
                   <div class="row">
                     <div class="col-lg-3 col-md-4 label">Phone</div>
-                    <div class="col-lg-9 col-md-8">(436) 486-3538 x29071</div>
+                    <div class="col-lg-9 col-md-8" id="phonenumber"></div>
                   </div>
 
                   <div class="row">
                     <div class="col-lg-3 col-md-4 label">Email</div>
-                    <div class="col-lg-9 col-md-8">k.anderson@example.com</div>
+                    <div class="col-lg-9 col-md-8"id="email"></div>
                   </div>
 
                 </div>
@@ -299,10 +299,9 @@
                     <div class="row mb-3">
                       <label for="profileImage" class="col-md-4 col-lg-3 col-form-label">Profile Image</label>
                       <div class="col-md-8 col-lg-9">
-                        <img src="assets/img/profile-img.jpg" alt="Profile">
+                        <!-- <img src="assets/img/profile-img.jpg" alt="Profile"> -->
                         <div class="pt-2">
-                          <a href="#" class="btn btn-primary btn-sm" title="Upload new profile image"><i class="bi bi-upload"></i></a>
-                          <a href="#" class="btn btn-danger btn-sm" title="Remove my profile image"><i class="bi bi-trash"></i></a>
+                          <a href="#" class="btn btn-primary btn-sm" title="Upload new profile image"><input type="file" id="uploadprofileimage"><i class="bi bi-upload"></i></a>
                         </div>
                       </div>
                     </div>
@@ -310,7 +309,7 @@
                     <div class="row mb-3">
                       <label for="fullName" class="col-md-4 col-lg-3 col-form-label">Full Name</label>
                       <div class="col-md-8 col-lg-9">
-                        <input name="fullName" type="text" class="form-control" id="fullName" value="Kevin Anderson">
+                        <input name="fullName" type="text" class="form-control" id="updatefullname" value="Kevin Anderson">
                       </div>
                     </div>
 
@@ -322,20 +321,20 @@
                     <div class="row mb-3">
                       <label for="Phone" class="col-md-4 col-lg-3 col-form-label">Phone</label>
                       <div class="col-md-8 col-lg-9">
-                        <input name="phone" type="text" class="form-control" id="Phone" value="(436) 486-3538 x29071">
+                        <input name="phone" type="text" class="form-control" id="updatePhone" value="(436) 486-3538 x29071">
                       </div>
                     </div>
 
                     <div class="row mb-3">
                       <label for="Email" class="col-md-4 col-lg-3 col-form-label">Email</label>
                       <div class="col-md-8 col-lg-9">
-                        <input name="email" type="email" class="form-control" id="Email" value="k.anderson@example.com">
+                        <input name="email" type="email" class="form-control" id="updateEmail" value="k.anderson@example.com" readonly>
                       </div>
                     </div>
 
 
                     <div class="text-center">
-                      <button type="submit" class="btn btn-primary">Save Changes</button>
+                      <button type="submit" class="btn btn-primary" id="updatebtn">Save Changes</button>
                     </div>
                   </form><!-- End Profile Edit Form -->
 
@@ -345,14 +344,8 @@
                 <div class="tab-pane fade pt-3" id="profile-change-password">
                   <!-- Change Password Form -->
                   <form>
-
-                    <div class="row mb-3">
-                      <label for="currentPassword" class="col-md-4 col-lg-3 col-form-label">Current Password</label>
-                      <div class="col-md-8 col-lg-9">
-                        <input name="password" type="password" class="form-control" id="currentPassword">
-                      </div>
-                    </div>
-
+                      <p id="error-msg" class="p-2 bg-danger text-white" style="display:none;">Error Msg</p>
+                      <p id="success-msg" class="p-2 bg-success text-white" style="display:none;">Success Msg</p>
                     <div class="row mb-3">
                       <label for="newPassword" class="col-md-4 col-lg-3 col-form-label">New Password</label>
                       <div class="col-md-8 col-lg-9">
@@ -368,7 +361,7 @@
                     </div>
 
                     <div class="text-center">
-                      <button type="submit" class="btn btn-primary">Change Password</button>
+                      <button type="submit" class="btn btn-primary"id="changepwd">Change Password</button>
                     </div>
                   </form><!-- End Change Password Form -->
 
@@ -405,6 +398,9 @@
 
   <!-- Template Main JS File -->
   <script src="../assets/js/main.js"></script>
+  <script type="module" src="js/changepwd.js"></script>
+  <script type="module" src="js/display_profile_data.js"></script>
+  <script type="module" src="js/profile_data.js"></script>
   <script type="module" src="js/logout.js"></script>
 
 </body>
