--- a/view_employee.html
+++ b/view_employee.html
@@ -64,13 +64,13 @@
         <li class="nav-item dropdown pe-3">
 
           <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
-            <img src="assets/img/profile-img.jpg" alt="Profile" class="rounded-circle">
-            <span class="d-none d-md-block dropdown-toggle ps-2">K. Anderson</span>
+            <img  id="profile-img" alt="Profile" class="rounded-circle">
+            <span class="d-none d-md-block dropdown-toggle ps-2" id="fullname"></span>
           </a><!-- End Profile Iamge Icon -->
 
           <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
             <li class="dropdown-header">
-              <h6>Kevin Anderson</h6>
+              <h6 id="subname"></h6>
               <!-- <span>Web Designer</span> -->
             </li>
             <li>
@@ -129,41 +129,7 @@
         </ul>
       </li><!-- End Components Nav -->
 
-      <li class="nav-item">
-        <a class="nav-link collapsed" data-bs-target="#forms-nav" data-bs-toggle="collapse" href="#" style="background-color: #F6F9FF;">
-          <i class="bi bi-journal-text"></i><span>Employees</span><i class="bi bi-chevron-down ms-auto"></i>
-        </a>
-        <ul id="forms-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
-          <li>
-            <a href="add_employee.html">
-              <i class="bi bi-circle"></i><span>Add Employee</span>
-            </a>
-          </li>
-          <li>
-            <a href="view_employee.html" style="background-color: #F6F9FF;">
-              <i class="bi bi-circle"></i><span>View Employee</span>
-            </a>
-          </li>
-        </ul>
-      </li><!-- End Forms Nav -->
 
-      <li class="nav-item">
-        <a class="nav-link collapsed" data-bs-target="#tables-nav" data-bs-toggle="collapse" href="#">
-          <i class="bi bi-layout-text-window-reverse"></i><span>Customers</span><i class="bi bi-chevron-down ms-auto"></i>
-        </a>
-        <ul id="tables-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
-          <li>
-            <a href="add_customer.html">
-              <i class="bi bi-circle"></i><span>Add Customer</span>
-            </a>
-          </li>
-          <li>
-            <a href="view_customer.html">
-              <i class="bi bi-circle"></i><span>View Customers</span>
-            </a>
-          </li>
-        </ul>
-      </li><!-- End Tables Nav -->
 
       <li class="nav-item">
         <a class="nav-link collapsed" data-bs-target="#charts-nav" data-bs-toggle="collapse" href="#">
@@ -171,18 +137,13 @@
         </a>
         <ul id="charts-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
           <li>
-            <a href="add_service.html">
-              <i class="bi bi-circle"></i><span>Add Services</span>
-            </a>
-          </li>
-          <li>
             <a href="view_service.html">
               <i class="bi bi-circle"></i><span>View Services</span>
             </a>
           </li>
           <li>
             <a href="service_report.html">
-              <i class="bi bi-circle"></i><span>Service Reports</span>
+              <i class="bi bi-circle"></i><span>View Booked Service</span>
             </a>
           </li>
         </ul>
@@ -203,11 +164,7 @@
               <i class="bi bi-circle"></i><span>View Subscriptions</span>
             </a>
           </li>
-          <li>
-            <a href="subscription_report.html">
-              <i class="bi bi-circle"></i><span>Subscriptions Report</span>
-            </a>
-          </li>
+          
         </ul>
       </li><!-- End Icons Nav -->
 
@@ -220,17 +177,12 @@
         </a>
       </li><!-- End Profile Page Nav -->
 
-      <li class="nav-item">
-        <a class="nav-link collapsed" href="customer_complain.html">
-          <i class="bi bi-question-circle"></i>
-          <span>Customer Complains</span>
-        </a>
-      </li><!-- End F.A.Q Page Nav -->
+  
 
       <li class="nav-item">
-        <a class="nav-link collapsed" href="report.html">
+        <a class="nav-link collapsed" href="payment.html">
           <i class="bi bi-envelope"></i>
-          <span>Report</span>
+          <span>Payment</span>
         </a>
       </li><!-- End Contact Page Nav -->
 
@@ -337,6 +289,7 @@
       <!-- Template Main JS File -->
       <script src="assets/js/main.js"></script>
       <script type="module" src="assets/js/checkstate.js"></script>
+      <script type="module" src="assets/js/profile-topbar.js"></script>
       <script type="module" src="assets/js/logout.js"></script>
     
 </body>
